fix webkit scrollbar styling

--- a/editor/src/lib.css
+++ b/editor/src/lib.css
@@ -64,7 +64,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb { background-color: var(--mono-8) }
-::-webkit-scrollbar-track { background-color: var(--mono-9) }
+::-webkit-scrollbar { background-color: var(--mono-9) }
 ::-webkit-scrollbar-corner { background-color: var(--mono-9) }
 
 ::selection {
